--- a/styles.css
+++ b/styles.css
@@ -4,5 +4,36 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /* outline: 2px solid red; */
 }
 
+body{
+    width: 100%;
+    height: 100vh;
+}
+
+.main-container{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 109, 119);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-container .game-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    row-gap: red;
+    width: 400px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 20px 20px 20px rgba(0,0,0,0.2);
+}
+
+.game-container .grid-cell{
+    border: 4px solid rgba(0, 47, 73, 0.267);
+    cursor: pointer;
+}
