--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Urbanist";
     /* outline: 2px solid red; */
+
 }
 
 body{
@@ -25,7 +27,6 @@ body{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
-    row-gap: red;
     width: 400px;
     height: 400px;
     overflow: hidden;
@@ -34,6 +35,30 @@ body{
 }
 
 .game-container .grid-cell{
-    border: 4px solid rgba(0, 47, 73, 0.267);
+    box-shadow: 3px 3px 5px rgba(0,0,0,0.2);
     cursor: pointer;
+    display: grid;
+    place-items: center;
+}
+
+.grid-cell .fa-xmark{
+    color: white;
+    font-size: 6rem;
+    display: none;
+    transition: 1.5s;    
+}
+
+.grid-cell .fa-o{
+    color: orange;
+    font-size: 6rem;
+    display: none;
+    transition: 1.5s;
+}
+
+.next-move .fa-o {
+    display: block;
+}
+
+.grid-cell .remove-first-move {
+    display: none;
 }
