--- a/styles.css
+++ b/styles.css
@@ -5,30 +5,52 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Urbanist";
-    /* outline: 2px solid red; */
+    outline: 2px solid red;
 
 }
 
 body{
     width: 100%;
     height: 100vh;
+    background-color: rgb(0, 109, 119);
 }
 
 .main-container{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(0, 109, 119);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 50%;
+    height: auto;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
 
+.main-container h1{
+    padding: 20px 0px;
+    color: white;
+    font-weight: 900;
+}
+
+.main-container h1 span{
+    color: orange;
+}
+
+.main-container .statusText{
+    padding: 20px 0px;
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
+}
 .main-container .game-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     width: 400px;
     height: 400px;
+    position: relative;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%);
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 20px 20px 20px rgba(0,0,0,0.2);
